<resources>
    <string name="app_name">Absolute Word</string>

    <string name="Learn">Learn</string>
    <string name="view_learn">Learn</string>
    <string name="action_settings">Settings</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="speak">Speak</string>
    <string name="instruct">Please pronounce this word:</string>
    <string name="instructDict">What word would you like to define?</string>
    <string name="tap_to_ask">Tap to ask</string>
    <string name="home">Going home</string>
    <string name="Dict">Dictionary</string>
    <string name="Ask">Ask</string>
    <string name="title_activity_my_word_bank">MyWordBankActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
