<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="hackduke.myapplication.AskActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructDict"
        android:textColor="#808080"
        android:textSize="15dp"
        android:textStyle="normal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/instructText" />

    <TextView
        android:id="@+id/askedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textColor="#FFFFFF"
        android:textSize="26dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/definedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textColor="#FFFFFF"
        android:textSize="26dp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <ImageButton
            android:id="@+id/btnAsk"
            android:layout_width="97dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/Ask"
            android:src="@android:drawable/ic_btn_speak_now" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/tap_to_ask"
            android:textColor="#FFFFFF"
            android:textSize="15dp"
            android:textStyle="normal" />

    </LinearLayout>

</RelativeLayout>
